Исправление критических ошибок

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <header class="header">
 
-            <div class="logo logo_theme_dark"><img src="./image/logo_dark.svg" alt="лого"></div>
+            <div class="logo logo_theme_dark"></div>
 
         </header>
 
@@ -27,11 +27,11 @@
 
                 <div class="profile-info">
 
-                    <div class=" account">
+                    <div class="account">
 
-                        <h1 class="profile-info__title">Жак-Ив Кусто</h1>
+                        <h1 class="account__title">Жак-Ив Кусто</h1>
 
-                        <button class="profile-info__edit-button"></button>
+                        <button class="account__edit-button"></button>
 
                     </div>
 
@@ -137,7 +137,7 @@
 
         </div>
 
-        <footer class="footer">
+        <footer class="footer ">
 
             <p class="footer__copyright"> &copy; 2023. Mesto Russia</p>
 
