Исправление критических ошибок

--- a/index.html
+++ b/index.html
@@ -35,14 +35,11 @@
 
                     </div>
 
-
                     <p class="profile-info__subtitle">Исследователь океана</p>
-
 
                 </div>
 
                 <button class="profile__add-button"><img src="./image/+.svg" alt="кнопка"></button>
-
 
             </div>
 
@@ -132,7 +129,6 @@
 
                 </div>
 
-
             </div>
 
         </div>
@@ -143,7 +139,7 @@
 
         </footer>
 
-        <div id="popup" class="popup">
+        <div class="popup">
 
             <div class="popup__body">
 
@@ -155,13 +151,11 @@
 
                         <h2 class="form__title">Редактировать профиль</h2>
 
-                        <fieldset class="form__input-container form__input-container_ctrl_texts">
+                        <fieldset class="form__input-container">
 
-                            <input type='text' class='form__item form__item_el_name' name='name'
-                                placeholder="Жак-Ив Кусто">
+                            <input type='text' class='form__item' name='name' placeholder="Жак-Ив Кусто">
 
-                            <input type='text' class='form__item form__item_el_profession ' name='profession'
-                                value="Исследователь океана">
+                            <input type='text' class='form__item' name='profession' value="Исследователь океана">
 
                         </fieldset>
 
