--- a/index.html
+++ b/index.html
@@ -29,42 +29,42 @@
                     <img src="./image/karachaevsk.jpg" alt="фото Карачаевска" class="element__mask-group">
                     <div class="element__content">
                         <h2 class="element__title">Карачаевск</h2>
-                        <button type="button" class="element__like element__like_state_active"></button>
+                        <button type="button" class="element__like"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__mask-group" src="./image/elbrus.jpg" alt="фото Эльбруса">
                     <div class="element__content">
                         <h2 class="element__title">Гора Эльбрус</h2>
-                        <button type="button" class="element__like element__like_state_disabled"></button>
+                        <button type="button" class="element__like"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img src="./image/dombai.jpg" alt="фото Домбая" class="element__mask-group">
                     <div class="element__content">
                         <h2 class="element__title">Домбай</h2>
-                        <button type="button" class="element__like element__like_state_disabled "></button>
+                        <button type="button" class="element__like"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__mask-group" src="./image/elbrus.jpg" alt="фото Эльбруса">
                     <div class="element__content">
                         <h2 class="element__title">Гора Эльбрус</h2>
-                        <button type="button" class="element__like element__like_state_disabled "></button>
+                        <button type="button" class="element__like"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img src="./image/dombai.jpg" alt="фото Домбая" class="element__mask-group">
                     <div class="element__content">
                         <h2 class="element__title">Домбай</h2>
-                        <button type="button" class="element__like element__like_state_disabled "></button>
+                        <button type="button" class="element__like"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img src="./image/karachaevsk.jpg" alt="фото Карачаевска" class="element__mask-group">
                     <div class="element__content">
                         <h2 class="element__title">Карачаево-Черкесия</h2>
-                        <button type="button" class="element__like element__like_state_disabled "></button>
+                        <button type="button" class="element__like"></button>
                     </div>
                 </article>
             </section>
@@ -72,9 +72,9 @@
         <footer class="footer ">
             <p class="footer__copyright"> &copy; 2023. Mesto Russia</p>
         </footer>
-        <div class="popup">
+        <div class="popup popup_opened">
             <div class="popup__body">
-                <form class="form" action="" name="edit_form">
+                <form class="form" action="url" name="edit_form">
                     <button class="form__close" type="button"></button>
                     <div class="form__main-conteiner">
                         <h2 class="form__title">Редактировать профиль</h2>
