Реализовано закрытие форм по крестику

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <footer class="footer ">
             <p class="footer__copyright"> &copy; 2023. Mesto Russia</p>
         </footer>
-        <div class="popup-edit popup-edit_opened">
+        <div class="popup-edit">
             <div class="popup-edit__body">
                 <form class="form" action="url" name="edit_form">
                     <button class="form__close" type="button"></button>
@@ -88,7 +88,7 @@
             </div>
         </div>
 
-        <div class="popup-add">
+        <div class="popup-add popup-add_opened">
             <div class="popup-add__body">
                 <form class="form" action="url" name="add_form">
                     <button class="form__close" type="button"></button>
@@ -107,6 +107,7 @@
         </div>
     </div>
     <script src='./script/script.js'></script>
+    
 </body>
 
 </html>
