Реализовано добавление карточек

--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
             </div>
         </div>
     </div>
+    <template id="addCard">
+        <article class="element">
+            <img src="./image/" alt="" class="element__mask-group">
+            <div class="element__content">
+                <h2 class="element__title"></h2>
+                <button type="button" class="element__like"></button>
+            </div>
+        </article>
+    </template>
     <script src='./script/script.js'></script>
     
 </body>
