--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@
                     <div class="form__main-conteiner">
                         <h2 class="form__title">Редактировать профиль</h2>
                         <fieldset class="form__input-container">
-                            <input type="text" class="form__item form__item_el_name" name="name"
-                                placeholder="Жак-Ив Кусто" required>
-                            <input type="text" class="form__item form__item_el_profession" name="profession"
-                                placeholder="Исследователь океана" required>
+                            <div class="form__input-group">
+                                <input type="text" id="name-input" class="form__item form__item_el_name" name="name"
+                                    placeholder="Жак-Ив Кусто" required minlength="2" maxlength="40">
+                                <span class="name-input-error form__input-error"></span>
+                            </div>
+                            <div class="form__input-group">
+                            <input type="text" id="profession-input" class="form__item form__item_el_profession" name="profession"
+                                placeholder="Исследователь океана" required minlength="2" maxlength="200"> 
+                                <span class="profession-input-error form__input-error"></span>
+                            </div>
                         </fieldset>
                     </div>
                     <button class="form__handlers" type="submit">Сохранить</button>
@@ -47,18 +53,26 @@
 
         <div class="popup" id="popup-add-form">
             <div class="popup__body">
-                <form class="form" action="url" name="add_form">
+                <form class="form" action="url" name="add_form" novalidate>
                     <button class="form__close" type="button"></button>
                     <div class="form__main-conteiner">
                         <h2 class="form__title">Новое место</h2>
                         <fieldset class="form__input-container">
-                            <input type="text" class="form__item form__item_el_name-pic" name="name"
-                                placeholder="Название">
-                            <input type="url" class="form__item form__item_el_link-pic" name="profession"
-                                placeholder="Ссылка на картинку">
+                            <div class="form__input-group">
+
+                                <input type="text" id="name-pic-input" class="form__item form__item_el_name-pic "
+                                    name="name" placeholder="Название" required minlength="2" maxlength="30">
+                                <span class="name-pic-input-error form__input-error"></span>
+                            </div>
+                            <div class="form__input-group">
+                                <input type="url" id="url-input" class="form__item form__item_el_link-pic"
+                                    name="profession" placeholder="Ссылка на картинку" required >
+                                <span class="url-input-error form__input-error"></span>
+
+                            </div>
                         </fieldset>
                     </div>
-                    <button class="form__handlers" type="submit">Создать</button>
+                    <button class="form__handlers " type="submit">Создать</button>
                 </form>
             </div>
         </div>
