код разделен на модули

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
             <button class="element__trash" type="button"></button>
         </article>
     </template>
-    <script src='./script/script.js'></script>
+    
+    <script type='module' src='./script/script.js'></script>
 
 </body>
 
