исправлено расположение файлов html, css, js

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,7 +15,7 @@
         </header>
         <main class="main">
             <section class="profile">
-                <img class="profile__avatar" src="<%=require('./image/avatar.jpg')%>" alt="фотокартачка">
+                <img class="profile__avatar" src="<%=require('../../image/avatar.jpg')%>" alt="фотокартачка">
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
                 <button class="profile__edit-button" type="button"></button>
                 <p class="profile__subtitle">Исследователь океана</p>
