сверстан счетчик для лайков

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -94,7 +94,11 @@
             <img src="" alt="" class="element__mask-group">
             <div class="element__content">
                 <h2 class="element__title"></h2>
-                <button type="button" class="element__like"></button>
+                <div class="element__like-group">
+                  <button type="button" class="element__like"></button>
+                  <p class="element__counter">0</p>  
+                </div>
+                
             </div>
             <button class="element__trash" type="button"></button>
         </article>
