открытие и закрытие попапа Avatar

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -81,9 +81,9 @@
             </div>
         </div>
 
-        <div class="popup popup_opened" id="popup-avatar-form">
+        <div class="popup" id="popup-avatar-form">
             <div class="popup__body">
-                <form class="form" action="url" name="add_form" novalidate>
+                <form class="form" action="url" name="avatar_form" novalidate>
                     <button class="form__close" type="button"></button>
                     <div class="form__main-conteiner">
                         <h2 class="form__title">Обновить аватар</h2>
